cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_GRAND_PROJECT)
find_package(PCL 1.3 REQUIRED COMPONENTS common io)
find_package(OpenCV 3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcl_read pcl_reader.cpp)
add_executable(project projection_backup.cpp)
add_executable(orbextract orbextract.cpp)
target_link_libraries(orbextract ${PCL_LIBRARIES})
target_link_libraries(orbextract ${OpenCV_LIBS})
target_link_libraries(pcl_read ${PCL_LIBRARIES})
target_link_libraries(project ${OpenCV_LIBS})
target_link_libraries(project ${PCL_LIBRARIES})

